[project]
name = "persian-stream-chatterbox"
version = "0.1.0"
description = "Persian Streaming Chatterbox: Multilingual TTS with Real-time Streaming Support"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Based on Chatterbox by Resemble AI and Chatterbox-Streaming by David Browne"}
]
dependencies = [
    "numpy>=1.24.0,<1.27.0",
    "resampy==0.4.3",
    "librosa>=0.10.0",
    "s3tokenizer",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.40.0",
    "diffusers>=0.29.0",
    "resemble-perth>=1.0.1",
    "omegaconf>=2.3.0",
    "conformer>=0.3.2",
    "safetensors>=0.5.0",
    "spacy-pkuseg",
    "pykakasi>=2.3.0",
    "sounddevice>=0.5.0",
    "gradio>=5.0.0",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/davidbrowne17/chatterbox-streaming"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

